# mcp-server-mlops-inspector

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mcp_server_mlops_inspector/: __init__.py  metrics_generator.py  server.py
tests/: test_server.py
